fixing the img size on mobile on the about page

--- a/style.css
+++ b/style.css
@@ -126,9 +126,9 @@ p {
 	padding-bottom: 0.5rem;
 }
 
-.img-fluid {
+/* .img-fluid {
 	max-width: 130px;
-}
+} */
 
 .mt-5 {
 	margin-top: 3rem !important;
